Ver.
--------------------------------
- Feature - Possibility to set the number of log rows to be retrieved with API added (#127)

Ver. 4.3.2 - 2022-12-19
--------------------------------
- Feature - First responder can call the GetOrganization API, in Backoffice doc (permissions to be re-initialized)
- Bugfix - Fix Level update barrier conditions (#124)

Ver. 4.3.1 - 2022-12-19
--------------------------------
- Feature - Communication Receivers table added (migration added)(#121)
- Feature - Allow user to delete his own profile from client

Ver. 4.3.0 - 2022-11-29
--------------------------------
- Feature - New notification for team association and dissociation (#115)
- Bugfix - Fix check on report categories based on language (#116)
- Feature - SearchVolontario as POST, allegatiComunicazione management update (#120)


Ver. 4.2.0 - 2022-11-10
--------------------------------
- Feature - Migrator project added to the solution (#117)

Ver. 4.1.0 - 2022-11-07
--------------------------------
- Feature - CSI service integration when a new report is created (#96)
- Feature - Maprequest with frequency > 0 management added (migration added)(#114)

Ver. 4.0.0 - 2022-11-02
--------------------------------
- Feature - Property Order added to Layer class (migration added)(sdk to be updated)(#113)

Ver. 3.10.0 - 2022-10-27
--------------------------------
- Bugfix - Fix Communication visibility (#110)
- Bugfix - Fix update of the TeamId, UpdateMissionStatus based on person and not on cache
- Bugfix - Fix sort for person actions (#112)
- Feature - Added test api to check if Tax code Volter service is available (#111)

Ver. 3.9.6 - 2022-10-05
--------------------------------
- Feature - Added visibility restriction in GetUsers API
- Feature - Possbility to disable bus producer from settings added
- Feature - Delete profile API added (#109)

Ver. 3.9.5 - 2022-09-29
--------------------------------
- Feature - TeamName property added in PersonActionDto class (#108)